# pecai

./: .gitignore  README.md  pyproject.toml  run.sh
data/: 1323561730236642695.txt  153120577918414673.txt  2277906714354252759.txt  2305003458459233100.txt  2385853299821716352.txt  2528798168100379865.txt  2641653856583702694.txt  4474475373476231224.txt  4517993868704124781.txt  4973173965517374633.txt  5016280246236556815.txt  5158891874358032262.txt  5217320806314180457.txt  5723206605418886168.txt  649818539170166932.txt  6608806741320959874.txt  6825657549006065031.txt  723584773945224988.txt  7660736790506138341.txt  8853929468922737102.txt  articles_info.csv  raw_articles.csv  rsims.csv
deployments/: docker-compose.yaml
deployments/neo4j_conf/: neo4j.conf
deployments/travel/: Dockerfile
scripts/: pack_deployments.sh  pack_image.sh  pack_models.sh  pack_volimes.sh
src/apps/: travel.py
src/notebooks/: agent.ipynb  graphgen.ipynb  nlp.ipynb
src/notebooks/.ipynb_checkpoints/: agent-checkpoint.ipynb  graphgen-checkpoint.ipynb  nlp-checkpoint.ipynb  sa4pecai-key-checkpoint.json
src/pecai/agents/common/chains/: common_chains.py
src/pecai/agents/travel/: agent.py
src/pecai/agents/travel/chains/: bad.py  (+3 more)
src/pecai/elements/: disambiguators.py  embeddings.py  entity.py  extractors.py  graph_queriers.py  keyworders.py  links.py  log.py  nodes_printers.py  nodes_sorters.py  patterns.py  query_correctors.py  routers.py  taggers.py  tg_bot.py
src/pecai/elements/llm/: yandex.py
src/prep-research/: balichat.csv  balichatik.csv  questions.csv  scrap.py
(+9 files in other folders)
